--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="page-header">
   <h1 class="logo">Pokédex</h1>
+  <ul class='pokemon-list'></ul>
 </div>
     <script src="js/scripts.js"></script>
   </body>
