--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   <ul class='pokemon-list'></ul>
 </div>
     <script src="js/scripts.js"></script>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
   </body>
 </html>
